--- a/WaveGUI.ui
+++ b/WaveGUI.ui
@@ -13,7 +13,7 @@
   <property name="font">
    <font>
     <family>Noto Sans Mono CJK SC</family>
-    <pointsize>14</pointsize>
+    <pointsize>15</pointsize>
     <weight>75</weight>
     <bold>true</bold>
    </font>
@@ -25,7 +25,7 @@
    <double>10.000000000000000</double>
   </property>
   <property name="autoFillBackground">
-   <bool>true</bool>
+   <bool>false</bool>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color:rgb(85, 87, 83)</string>
@@ -35,7 +35,7 @@
     <property name="geometry">
      <rect>
       <x>1100</x>
-      <y>880</y>
+      <y>890</y>
       <width>171</width>
       <height>41</height>
      </rect>
@@ -55,7 +55,7 @@
      <bool>false</bool>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color:rgb(52, 56, 55);
+     <string notr="true">background-color:rgb(54, 55, 55);
 border-radius: 20px;
 color: rgb(243, 243, 243);</string>
     </property>
@@ -76,7 +76,7 @@ color: rgb(243, 243, 243);</string>
     <property name="geometry">
      <rect>
       <x>950</x>
-      <y>820</y>
+      <y>830</y>
       <width>321</width>
       <height>41</height>
      </rect>
@@ -93,7 +93,7 @@ color: rgb(243, 243, 243);</string>
     <property name="styleSheet">
      <string notr="true">border: 2px solid rgb(85, 87, 83);
 border-radius: 20px;
-background-color: rgb(52, 56, 55);
+background-color: rgb(54, 55, 55);
 padding-left:22px;
 color: rgb(255, 255, 255)
 </string>
@@ -109,7 +109,7 @@ color: rgb(255, 255, 255)
     <property name="geometry">
      <rect>
       <x>1200</x>
-      <y>720</y>
+      <y>730</y>
       <width>48</width>
       <height>26</height>
      </rect>
@@ -123,7 +123,7 @@ background-color:rgb(54, 55, 55)</string>
     <property name="geometry">
      <rect>
       <x>1200</x>
-      <y>660</y>
+      <y>670</y>
       <width>48</width>
       <height>26</height>
      </rect>
@@ -138,7 +138,7 @@ background-color:rgb(54, 55, 55)</string>
     <property name="geometry">
      <rect>
       <x>1190</x>
-      <y>640</y>
+      <y>650</y>
       <width>67</width>
       <height>17</height>
      </rect>
@@ -160,7 +160,7 @@ background-color:rgb(54, 55, 55)</string>
     <property name="geometry">
      <rect>
       <x>1190</x>
-      <y>700</y>
+      <y>710</y>
       <width>67</width>
       <height>17</height>
      </rect>
@@ -168,7 +168,7 @@ background-color:rgb(54, 55, 55)</string>
     <property name="font">
      <font>
       <family>Ubuntu Mono</family>
-      <pointsize>14</pointsize>
+      <pointsize>15</pointsize>
      </font>
     </property>
     <property name="styleSheet">
@@ -229,7 +229,7 @@ background-color:rgb(54, 55, 55)</string>
    <widget class="MplWidget" name="MplWidget1" native="true">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>50</x>
       <y>100</y>
       <width>801</width>
       <height>261</height>
@@ -243,8 +243,8 @@ border-radius:20px</string>
    <widget class="MplWidget" name="MplWidget2" native="true">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>660</y>
+      <x>50</x>
+      <y>380</y>
       <width>801</width>
       <height>261</height>
      </rect>
@@ -255,15 +255,14 @@ border-radius:20px</string>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(52, 56, 55);
 border-radius:20px;
-padding: 20px;
-background-color:rgba(r, g, b, alpha);</string>
+padding: 20px;</string>
     </property>
    </widget>
    <widget class="MplWidget" name="MplWidget3" native="true">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>380</y>
+      <x>50</x>
+      <y>660</y>
       <width>801</width>
       <height>261</height>
      </rect>
@@ -276,8 +275,8 @@ border-radius:20px</string>
    <widget class="QWidget" name="verticalWidget" native="true">
     <property name="geometry">
      <rect>
-      <x>940</x>
-      <y>660</y>
+      <x>950</x>
+      <y>670</y>
       <width>91</width>
       <height>91</height>
      </rect>
@@ -347,12 +346,63 @@ padding-left:16px
     <property name="styleSheet">
      <string notr="true">border: 2px solid rgb(85, 87, 83);
 border-radius: 20px;
-background-color: rgb(52, 56, 55);
+background-color: rgb(54, 55, 55);
 padding-left:22px;
 color: rgb(255, 255, 255)</string>
     </property>
     <property name="text">
      <string>Let's start</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox">
+    <property name="geometry">
+     <rect>
+      <x>1150</x>
+      <y>610</y>
+      <width>101</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(54, 55, 55);
+color: rgb(255, 255, 255)</string>
+    </property>
+    <item>
+     <property name="text">
+      <string>low</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>medium</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>high</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>1176</x>
+      <y>580</y>
+      <width>71</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Ubuntu Mono</family>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color:rgb(255, 255, 255)</string>
+    </property>
+    <property name="text">
+     <string>Density</string>
     </property>
    </widget>
   </widget>
